// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table > should render 1`] = `
<div>
  <div
    class="css-1m6rt2i"
    role="table"
  >
    <table
      cellpadding="0"
      class="w-full table-auto"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-lg last:rounded-tr-lg w-1"
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top flex-row-reverse"
            >
              <div
                class=""
              >
                Header 1
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
              >
                <div
                  class="transition-transform rotate-180 css-15txs7d"
                  height="10"
                  role="img"
                  width="10"
                >
                  <svg
                    id="chevron-down-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-lg last:rounded-tr-lg no-border"
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top"
            >
              <div
                class=""
              >
                Header 2
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
              >
                <div
                  class="transition-transform rotate-180 css-15txs7d"
                  height="10"
                  role="img"
                  width="10"
                >
                  <svg
                    id="chevron-down-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-lg last:rounded-tr-lg"
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top justify-end flex-row-reverse"
            >
              <div
                class=""
              >
                Header 3
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
              >
                <div
                  class="transition-transform rotate-180 css-15txs7d"
                  height="10"
                  role="img"
                  width="10"
                >
                  <svg
                    id="chevron-down-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr>
          <td>
            1
          </td>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td>
            1
          </td>
          <td>
            2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table > should render empty rows if template is not provided 1`] = `
<div>
  <div
    class="css-1m6rt2i"
    role="table"
  >
    <table
      cellpadding="0"
      class="w-full table-auto"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-lg last:rounded-tr-lg w-1"
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top flex-row-reverse"
            >
              <div
                class=""
              >
                Header 1
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
              >
                <div
                  class="transition-transform rotate-180 css-15txs7d"
                  height="10"
                  role="img"
                  width="10"
                >
                  <svg
                    id="chevron-down-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-lg last:rounded-tr-lg no-border"
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top"
            >
              <div
                class=""
              >
                Header 2
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
              >
                <div
                  class="transition-transform rotate-180 css-15txs7d"
                  height="10"
                  role="img"
                  width="10"
                >
                  <svg
                    id="chevron-down-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-lg last:rounded-tr-lg"
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top justify-end flex-row-reverse"
            >
              <div
                class=""
              >
                Header 3
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
              >
                <div
                  class="transition-transform rotate-180 css-15txs7d"
                  height="10"
                  role="img"
                  width="10"
                >
                  <svg
                    id="chevron-down-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr />
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table > should render empty table if pagination returns undefined rows 1`] = `
<div>
  <div
    class="css-1m6rt2i"
    role="table"
  >
    <table
      cellpadding="0"
      class="w-full table-auto"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-lg last:rounded-tr-lg w-1"
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top flex-row-reverse"
            >
              <div
                class=""
              >
                Header 1
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
              >
                <div
                  class="transition-transform rotate-180 css-15txs7d"
                  height="10"
                  role="img"
                  width="10"
                >
                  <svg
                    id="chevron-down-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-lg last:rounded-tr-lg no-border"
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top"
            >
              <div
                class=""
              >
                Header 2
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
              >
                <div
                  class="transition-transform rotate-180 css-15txs7d"
                  height="10"
                  role="img"
                  width="10"
                >
                  <svg
                    id="chevron-down-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-lg last:rounded-tr-lg"
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top justify-end flex-row-reverse"
            >
              <div
                class=""
              >
                Header 3
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
              >
                <div
                  class="transition-transform rotate-180 css-15txs7d"
                  height="10"
                  role="img"
                  width="10"
                >
                  <svg
                    id="chevron-down-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      />
    </table>
  </div>
</div>
`;

exports[`Table > should split rows 1`] = `
<div>
  <div
    class="css-1m6rt2i"
    role="table"
  >
    <table
      cellpadding="0"
      class="w-full table-auto"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-lg last:rounded-tr-lg w-1"
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top flex-row-reverse"
            >
              <div
                class=""
              >
                Header 1
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
              >
                <div
                  class="transition-transform rotate-180 css-15txs7d"
                  height="10"
                  role="img"
                  width="10"
                >
                  <svg
                    id="chevron-down-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-lg last:rounded-tr-lg no-border"
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top"
            >
              <div
                class=""
              >
                Header 2
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
              >
                <div
                  class="transition-transform rotate-180 css-15txs7d"
                  height="10"
                  role="img"
                  width="10"
                >
                  <svg
                    id="chevron-down-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-lg last:rounded-tr-lg"
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top justify-end flex-row-reverse"
            >
              <div
                class=""
              >
                Header 3
              </div>
              <div
                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
              >
                <div
                  class="transition-transform rotate-180 css-15txs7d"
                  height="10"
                  role="img"
                  width="10"
                >
                  <svg
                    id="chevron-down-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr />
      </tbody>
    </table>
  </div>
</div>
`;
